# algae-farmer

./: Cargo.toml  Makefile  README.md  SPEC.md  make_lang_targets.sh
queries/: common_item_type_query.sql  db_commands.sql  wp_not_wd.sql
scripts/: download.sh  timed.sh
src/: constants.rs  languages.rs  lib.rs  wikitext.rs
